# python-pdf-memory

./: README.md  generate_pdf_and_rotate.py  pyproject.toml
